--- a/8th/index.html
+++ b/8th/index.html
@@ -2,46 +2,29 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width,height=device-height initial-scale=1">
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Frontend Mentor | Huddle landing page with single introductory section</title>
 </head>
 <body>
-  <div id="all-mobile">
-    <div class="part1-m">
+  <div id="all">
+    <div class="part1">
 <img id="logo" src="./images/logo.svg">
 <img id ="mock" src="./images/mock.svg" >
 </div>
-<div class="part2-m">
+<div class="part2">
 <p class="title">Build The Community Your Fans Will Love</p>
   <p class="parag">Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
   Create connections with your users as you engage in genuine discussion. 
 </p>
-  <button id="btn-m">Register</button>
-  <div id="footer-m">
+  <button id="btn">Register</button>
+   <div id="footer">
   <a href="#" target="_blank"><img class="footer" src="./images/github.svg"></a>
   <a href="#" target="_blank"><img class="footer" src="./images/fb.svg"></a>
   <a href="#" target="_blank"><img  class="footer" src="./images/linkedin.svg"></a>
+</div> 
 </div>
-</div>
-</div>
-<div id="all-desktop">
-  <div class="part1-d">
-<img id="logo" src="./images/logo.svg">
-<img id ="mock" src="./images/mock.svg" >
-</div>
-<div class="part2-d">
-<p class="title">Build The Community Your Fans Will Love</p>
-<p class="parag">Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-Create connections with your users as you engage in genuine discussion. 
-</p>
-<button id="btn-d">Register</button>
-<!-- <div id="footer-d">
-<a href="#" target="_blank"><img class="footer" src="./images/github.svg"></a>
-<a href="#" target="_blank"><img class="footer" src="./images/fb.svg"></a>
-<a href="#" target="_blank"><img  class="footer" src="./images/linkedin.svg"></a>
-</div> -->
 </div>
 </div>
 </body>
